Fixing overlap issue
Some of the text goes into the next row below.

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -324,7 +324,7 @@ footer {
     float: left;
     width: 50%;
     padding: 1.6%;
-    height: 450px;
+    height: 500px;
     background-color: #f2f2f2;
 }
 
@@ -338,7 +338,7 @@ footer {
     float: left;
     width: 50%;
     padding: 1.6%;
-    height: 450px;
+    height: 500px;
     background-color: #4d4d4d;
 }
 
